# community

./: .gitignore  LICENSE  README.md  pyproject.toml
plotting/: show_allred.py
reduction/: mat_calibrate_all_drs.py  mat_reduce_all_drs.py
reduction/dependencies/: avg_oifits.py  calib_BCD2.py  fluxcal.py  libAutoPipeline.py  my_mat_autoPipeline.py  pk2oifits.py
reduction/example_input/: nightdir_lst_p114.py  obs_lst_cal_p114.py  obs_lst_red_p114.py
